--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1>|</h1>
         <h5>Designed and Developed by Payal!</h5>
         <h1>|</h1>
-        <a href="./"><h5>Github</h5></a>
+        <a href="https://github.com/Payal01garg/gallerie"><h5>Github</h5></a>
     </footer>
 
     <script src="/assets/common.js"></script>
